@@ -1,3 +1,9 @@
+2006-12-01  Behdad Esfahbod  <behdad@gnome.org>
+
+	* bprobe-private.h: Add format(printf) attributes to some functions.
+
+	* probes/pango-glyph_extents.probe: New sample probe.
+
 2006-02-12  Behdad Esfahbod  <behdad@gnome.org>
 
 	* bprobe.h, bprobe-private.h: Make PID accessible everywhere.
